--- a/ejercicios/ej-00.md
+++ b/ejercicios/ej-00.md
@@ -1,8 +1,8 @@
 ## Ejercicio 0
-Los objetivos de esta práctica son familiarizarse con **VS Code** y aprender a usar el **debug** del programa. También nos aseguraremos de que funciona correctamente pues no lo hemos probado.  
+Los objetivos de esta práctica son familiarizarse con **VS Code** y aprender a usar el **debug** del programa. También nos aseguraremos de que funciona correctamente, pues no lo hemos probado.  
 
-* Lo primero que haremos será cambiar de rama a **manda-aqui** es probable que nos aparezca como **origin/manda-aqui**.  
-* Ahora vamos a crear dentro de la carpeta **/ejercicios** un archivo con este patrón: `NOMBRE-NN.php`, en mi caso y en esta ocasión el archivo se llamaría `edufdez-00.php` *(sin mayusculas, por favor)*.  
+* Lo primero que haremos será cambiar de rama a **manda-aqui**. Es probable que nos aparezca como **origin/manda-aqui**.  
+* Ahora vamos a crear dentro de la carpeta **/ejercicios** un archivo con este patrón: `NOMBRE-NN.php`. En mi caso y en esta ocasión el archivo se llamaría `edufdez-00.php` *(sin mayusculas, por favor)*.  
 Espero que no salgais del programa para hacer estas cosas.
 * Y vamos a editarlo, pegamos esto en él:
 
@@ -16,8 +16,8 @@ echo $test1+$test2;
 
 ```
 
-* A continuación nos vamos al **debug**. Como no lo hemos usado antes tendremos que crear el archivo de configuración, nada complicado, le damos al "play" y se nos abrirá la paleta de comandos con un par de lenguajes. Le damos a php y creará el archivo (ya podemos cerrarlo). Ahora le damos de nuevo y depurará el .php abierto.  
-* Nos dará un error, *debe* darnos un error. Si no te da error, tenemos un problema, mandame un [issue](https://github.com/EduFdezSoy/curso-php/issues).
+* A continuación nos vamos al **debug**. Como no lo hemos usado antes tendremos que crear el archivo de configuración, nada complicado. Le damos al "play" y se nos abrirá la paleta de comandos con un par de lenguajes. Le damos a php y creará el archivo (ya podemos cerrarlo). Ahora le damos de nuevo y depurará el .php abierto.  
+* Nos dará un error, *debe* darnos un error. Si no te da error, tenemos un problema, mándame un [issue](https://github.com/EduFdezSoy/curso-php/issues).
 * Una vez veamos el error, lo corregimos (aquí el código correcto):
 
 ```php
@@ -30,7 +30,9 @@ echo $test1.$test2;
 
 ```
 
-* Y volvemos a darle al debug, esta vez no debe dar errores y mostrará `esto es una prueba` por la **consola de depuración**.  
-* Muy bien, ahora vamos a subirlo *(recuerda guardarlo con **Ctrl+S**)*
+* Y volvemos a darle al debug. Esta vez no debe dar errores y mostrará `esto es una prueba` por la **consola de depuración**.  
+* Muy bien, ahora vamos a subirlo *(recuerda guardarlo con **Ctrl+S**)* desde el git integrado podemos hacer un commit, pero ojo, no queremos subir el `launch.json`. Debes solucionar este problema antes de continuar.  
+* Resuelto o no, desde el git integrado haremos click derecho en el `launch.json` y lo agregaremos a `.gitignore`.  
+* \*Guardamos\* Ahora ya no se subirá cuando hagamos un commit.
 
-* remember poner el json en gitignore
+Eso es todo, espero ver la practica en el git!
