Añadida aclaración y enlace

--- a/ejercicios/ej-00.md
+++ b/ejercicios/ej-00.md
@@ -9,6 +9,7 @@ Espero que no salgais del programa para hacer estas cosas.
 ```php
 
 <?php
+
 $test1 = "esto es ";
 $test2 = "una prueba";
 
@@ -23,6 +24,7 @@ echo $test1+$test2;
 ```php
 
 <?php
+
 $test1 = "esto es ";
 $test2 = "una prueba";
 
@@ -34,5 +36,8 @@ echo $test1.$test2;
 * Muy bien, ahora vamos a subirlo *(recuerda guardarlo con **Ctrl+S**)* desde el git integrado podemos hacer un commit, pero ojo, no queremos subir el `launch.json`. Debes solucionar este problema antes de continuar.  
 * Resuelto o no, desde el git integrado haremos click derecho en el `launch.json` y lo agregaremos a `.gitignore`.  
 * \*Guardamos\* Ahora ya no se subirá cuando hagamos un commit.
+* Recordad que para sincronizar los datos hay que pulsar abajo.
 
-Eso es todo, espero ver la practica en el git!
+Eso es todo, espero ver la practica en el git!  
+
+[Volver al Readme](https://github.com/EduFdezSoy/curso-php/blob/master/README.md#curso-php)
