--- a/ejercicios/ej-00.md
+++ b/ejercicios/ej-00.md
@@ -35,6 +35,7 @@ echo $test1.$test2;
 * Y volvemos a darle al debug. Esta vez no debe dar errores y mostrará `esto es una prueba` por la **consola de depuración**.  
 * Muy bien, ahora vamos a subirlo *(recuerda guardarlo con **Ctrl+S**)* desde el git integrado podemos hacer un commit, pero ojo, no queremos subir el `launch.json`. Debes solucionar este problema antes de continuar.  
 * Resuelto o no, desde el git integrado haremos click derecho en el `launch.json` y lo agregaremos a `.gitignore`.  
+*(Es posible que .gitignore ya exista y esté configurado, pues se habrá sincronizado con el mio)*
 * \*Guardamos\* Ahora ya no se subirá cuando hagamos un commit.
 * Recordad que para sincronizar los datos hay que pulsar abajo.
 
