Añadido menú de navegación

--- a/ejercicios/ej-00.md
+++ b/ejercicios/ej-00.md
@@ -41,4 +41,4 @@ echo $test1.$test2;
 
 Eso es todo, espero ver la practica en el git!  
 
-[Volver al Readme](https://github.com/EduFdezSoy/curso-php/blob/master/README.md#curso-php)
+[Volver al Readme](https://github.com/EduFdezSoy/curso-php/blob/master/README.md#curso-php) - [Índice del curso](https://github.com/EduFdezSoy/curso-php/blob/master/README.md#%C3%8Dndice-de-clases)
