--- a/ejercicios/ej-01.md
+++ b/ejercicios/ej-01.md
@@ -1,4 +1,4 @@
-## Ejercicio 1
+## Practicas 1
 * Crea una carpeta dentro de `ejercicios/` con tu nombre o usuario.
 * Crea dentro otra carpeta siguiendo este patrón: `ej-NN` donde `NN` será el número de la práctica.
 * Crea dentro **tantos archivos como sea necesario** para realizar la práctica correspondiente, ponles de nombre el número de cada ejercicio.  
