--- a/ejercicios/ej-02.md
+++ b/ejercicios/ej-02.md
@@ -16,4 +16,7 @@
 
 5. Usando el ejercicio 2, muestra **sólo** los números impares PERO, si es multiplo de 2 y de 5 que pare.  
 
+
+EN PROCESO MAS CONDICIONES  
+
 [Volver al Readme](https://github.com/EduFdezSoy/curso-php/blob/master/README.md#curso-php) - [Índice del curso](https://github.com/EduFdezSoy/curso-php/blob/master/README.md#%C3%8Dndice-de-clases)
