--- a/ejercicios/ej-02.md
+++ b/ejercicios/ej-02.md
@@ -1,5 +1,9 @@
 ## Practicas 2
 
+Usa al menos un `for`, un `while` y un `do-while` en algún ejercicio de esta relación.  
+
+---
+
 1. Crea un bucle donde se generen 10 números aleatorios entre 0 y 100.  
 
 2. Usando el bucle anterior, aclara si el número que se genera es par o impar. *(recuerda que `%` hace el módulo de un número)*  
@@ -15,8 +19,5 @@
 4. Crea un bucle donde se genere un número aleatorio de entre 0 y 100. Haz que el bucle termine cuando salga 100.
 
 5. Usando el ejercicio 2, muestra **sólo** los números impares PERO, si es multiplo de 2 y de 5 que pare.  
-
-
-EN PROCESO MAS CONDICIONES  
 
 [Volver al Readme](https://github.com/EduFdezSoy/curso-php/blob/master/README.md#curso-php) - [Índice del curso](https://github.com/EduFdezSoy/curso-php/blob/master/README.md#%C3%8Dndice-de-clases)
