--- a/ejercicios/ej-02.md
+++ b/ejercicios/ej-02.md
@@ -1,5 +1,9 @@
 ## Practicas 2
 
+Usa al menos un `for`, un `while` y un `do-while` en algún ejercicio de esta relación.  
+
+---
+
 1. Crea un bucle donde se generen 10 números aleatorios entre 0 y 100.  
 
 2. Usando el bucle anterior, aclara si el número que se genera es par o impar. *(recuerda que `%` hace el módulo de un número)*  
